# TuiRedis

./: .gitignore  CHANGELOG.md  CHANGELOG_zh-CN.md  LICENSE  README.md  README_zh-CN.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_config.py  test_redis_client.py  test_ui_connect.py  test_ui_main.py  test_ui_select.py  test_ui_widgets.py  test_ui_widgets_extra.py
tuiredis/: __init__.py  __main__.py  app.py  config.py  redis_client.py
tuiredis/screens/: __init__.py  connect.py  main.py  new_key_modal.py
tuiredis/styles/: app.tcss
tuiredis/widgets/: __init__.py  command_input.py  key_detail.py  key_tree.py  server_info.py  value_viewer.py
